# project-2_Osadchuk_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parsers.py  utils.py
