[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Anastasiya Osadchuk",email = "diamondtheb@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

 packages = [
     { include = "src" },
 ]

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
