[project]
name = "src"
version = "0.2.0"
description = ""
authors = [
    {name = "Anastasiya Osadchuk",email = "diamondtheb@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)",
    "prettytable (>=3.16.0,<4.0.0)"
]

 packages = [
     { include = "src" },
 ]

[tool.poetry.scripts]
project = "src.primitive_db.main:main"
database = "src.primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.1,<0.15.0)"
]
